syntax = "proto3";

package calculator;
option go_package = "./calculator/calculatorpb";

message Calculation {
  double a = 1;
  double b = 2;
}

message FindMaxRequest {
  int32 value = 1;
}

message FindMaxResponse {
  int32 value = 1;
}

message CalculatorRequest {
  Calculation calculation = 1;
}

message CalculatorResponse {
  double result = 1;
}

message SquareRootRequest {
  int32 number = 1;
}

message SquareRootResponse {
  double number_root =1;
}


service CalculatorService {
  rpc Sum(CalculatorRequest) returns (CalculatorResponse) {};

  rpc FindMax(stream FindMaxRequest) returns (stream FindMaxResponse) {};

  // error handling
  // this RPC will throw an exception if the sent number is negative
  // The error being sent is type of INVALID_ARGUMENT
  rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}
